PDF: Fix progress bar for files of unknown size.

BUG=666663

Review-Url: https://codereview.chromium.org/2516453003
Cr-Commit-Position: refs/heads/master@{#433330}

Former-commit-id: 2c819909fea9b392532a6750f6c1559e796a5ac5